fixing header alignment

--- a/finance-project/src/Style/AgePage.css
+++ b/finance-project/src/Style/AgePage.css
@@ -1,6 +1,7 @@
 .ageShell {
     padding-top: 50px;
     padding-left: 50px;
+    display: block;
 }
 
 h1 {
@@ -18,4 +19,8 @@ p {
 .links {
     padding-left: 50px;
     color: #143642;
+}
+
+.learnHeader {
+    text-align: center;
 }
